# galaga-sdl2

./: .gitignore  CMakeLists.txt  Makefile
include/: UIManager.h  assetManager.h  bullet.h  enemy.h  enemySpawner.h  entities.h  game.h  leaderboard.h  player.h
src/: main.cpp
src/source/: UIManager.cpp  assetManager.cpp  bullet.cpp  enemy.cpp  enemySpawner.cpp  game.cpp  leaderboard.cpp  player.cpp
